[package]
name = "openhub"
version = "0.1.0"
edition = "2024"

[dependencies]
wry = "0.51"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
zip = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
winit = "0.30"

[build-dependencies]
winres = "0.1"
